# skills-internet-codex

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  publiccode.yml  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: audit-visibility.yml  ci.yml  labeler.yml  monitoring-content.yml  monitoring-links.yml
.plugin/: plugin.json
scripts/: generate_plugin.py
skills/inet/: SKILL.md
skills/inet-api/: reference.md
skills/inet-mail/: SKILL.md  reference.md
skills/inet-toolbox/: SKILL.md  reference.md
skills/inet-web/: reference.md
