[project]
name = "skills-internet"
version = "0.2.7"
description = "Internet.nl Claude Code Plugin - Test en implementeer moderne internetstandaarden"
requires-python = ">=3.12"
dependencies = ["requests>=2.33.1"]

[dependency-groups]
dev = ["pytest>=9.0.3", "responses>=0.26.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
